# cleverswitch-fork

./: CLAUDE.md  README.md  config.example.yaml  pyproject.toml  setup_macos.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG.yml
rules.d/: 42-cleverswitch.rules
scripts/linux/: setup.sh  uninstall.sh
scripts/mac/: setup.sh  setup_startup.sh  uninstall.sh
scripts/windows/: setup_startup_windows.bat
src/cleverswitch/: __main__.py  cli.py  config.py  discovery.py  errors.py  factory.py  hooks.py  listeners.py  model.py  platform_setup.py
src/cleverswitch/hidpp/: constants.py  protocol.py  transport.py
tests/: conftest.py  test_cli.py  test_config.py  test_discovery.py  test_errors.py  test_factory.py  test_hooks.py  test_listeners.py  test_monitor.py  test_platform_setup.py  test_protocol.py
